--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="textInputLayout_login_passwordHint">Password</string>
     <string name="textInputLayout_login_emailEmpty">Please enter email address.</string>
     <string name="textInputLayout_login_passwordEmpty">Please enter password.</string>
-    <string name="textInputLayout_login_passwordIncorrect">Password incorrect.</string>
-    <string name="textInputLayout_login_invalidLoginCredentials">Login failed. Invalid Login credentials.</string>
+    <string name="textInputLayout_login_invalidEmail">Invalid Login. Check Email</string>
+    <string name="textInputLayout_login_invalidPassword">Invalid Login. Check Password.</string>
+    <string name="textInputLayout_login_invalidLoginCredentials">Invalid Login Credentials</string>
     <string name="contentDescription_login_logo">Logo</string>
+    <string name="errorMessage_unknownError">Unknown Error</string>
 </resources>
